# PokeHabits

./: .gitignore  CMakeLists.txt  README.md
assets/icon/: icon.rc
cmake/: CMakeFunc.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  CalendarList.cpp  CalendarList.h  CalendarModel.cpp  CalendarModel.h  DailyReportList.cpp  DailyReportList.h  DailyReportModel.cpp  DailyReportModel.h  DatabaseManager.cpp  DatabaseManager.h  PokeApiManager.cpp  PokeApiManager.h  PokeHabitsApp.cpp  PokeHabitsApp.h  Pokemon.h  PokemonController.cpp  PokemonController.h  PokemonList.cpp  PokemonList.h  PokemonModel.cpp  PokemonModel.h
src/ui/: CMakeLists.txt
src/ui/component/: AddHabitPopup.qml  CalendarHeader.qml  ChoosePokemonPopup.qml  DayDelegate.qml  GradientFrame.qml  HabitBoard.qml  HabitDelegate.qml  HabitTitle.qml  InfoTable.qml  NoteBoard.qml  PokemonFrame.qml  StatBar.qml  ToolItem.qml  ToolPanel.qml  UiStyle.qml  qmldir
src/ui/component_v1/: AddHabitPopup.qml  ChoosePokemonPopup.qml  HabitBoard.qml  HabitDelegate.qml  HabitTitle.qml  NoteBoard.qml  PokemonFrame.qml  StatBar.qml  ToolItem.qml  ToolPanel.qml  qmldir
src/ui/component_v2/: ContentFooter.qml  ContentHeader.qml  ContentView.qml  CreateListFrame.qml  DateFrame.qml  ElementFrame.qml  ElementIcon.qml  EvolChainBoard.qml  FrequencyDataField.qml  HabitDelegate.qml  HabitDetailView.qml  HabitEditorContent.qml  HabitEditorView.qml  HabitInfo.qml  HabitNameDataField.qml  HabitNameWithPoke.qml  HabitStat.qml  HabitStatsBoard.qml  HeaderElement.qml  MainViewLoader.qml  PokeballDateDelegate.qml  PokedexDelegate.qml  PokedexPopup.qml  PokemonFrame.qml  PokemonInfo.qml  ProfileToolFrame.qml  SaveDischargeSelector.qml  SidebarView.qml  TargetPokeDataField.qml  TextWithPokeball.qml  TimeDataField.qml  TitleFrame.qml  TitleList.qml  UiConstant.qml  qmldir
src/ui/view/: Main.qml  ViewV1.qml  ViewV2.qml
